# homer

./: .gitignore  Cargo.toml  LICENSE  README.md  partitions.csv  sdkconfig.defaults
configs/: base.json
src/: buttons.rs  display.rs  files.rs  lib.rs  main.rs  util.rs  wifi.rs
