[package]
name = "homer"
version = "0.1.0"
authors = ["David Pollak <feeder.of.the.bears@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.42.2", optional = true, default-features = false }
esp-idf-svc = { version = "0.47.1", optional = true, default-features = false }
embedded-svc = { version = "0.26.1", optional = true, default-features = false }

anyhow = {version = "1", features = ["backtrace"]}
url = "2"
embedded-graphics = "0.8.1"
display-interface = "0.4"
display-interface-spi = "0.4"
mipidsi = "0.7.1"
chrono = "0.4.31"
profont = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
crossbeam = "0.8.2"

[build-dependencies]
embuild = "0.31.2"

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats